fixed color area stats alignment; removed old component

--- a/public/style.css
+++ b/public/style.css
@@ -277,7 +277,6 @@ span {
 .colorInches {
   display: flex;
   flex-wrap: wrap;
-  width: 200px;
   justify-content: space-evenly;
 }
 
